[simple-memo] feat : 특정 분류에 따른 메모를 반환하는 응답 코드 작성